--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vuetify": "^3.8.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
