Update tsconfig.json to include path mappings for components and views

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,9 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "paths": {
+    "@components/*": ["src/components/*"],
+    "@views/*": ["src/views/*"]
+  }
 }
